# ethereum-node-implementation

./: README.md  build.zig
go/: .gitignore  flake.nix  go.mod  go.sum
go/cmd/clients/execution/: main.go  private_key.go
go/pkg/networking/: networking.go
go/pkg/networking/bootnode/: bootnode.go  bootnode_test.go  defaults.go  ping.go
go/pkg/networking/stacks/devp2p/: devp2p.go
go/pkg/networking/stacks/discovery/: discovery.go
go/pkg/networking/stacks/discovery/discv4/packet/: header.go  packet.go  packet_test.go  ping.go  pong.go  utils.go
go/pkg/types/: hashes.go
go/pkg/utils/assert/: assert.go
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/src/networking/: mod.rs
rust/src/networking/bootnode/: mod.rs
rust/src/networking/discovery/: endpoint.rs  mod.rs
rust/src/networking/discovery/kademlia/: mod.rs
rust/src/networking/discovery/packet/: mod.rs
src/layers/execution/: main.zig
src/rlp/: decode.zig  encode.zig
src/tries/modified-merkle-patricia/: state.zig  trie.zig
zig/: .editorconfig  .gitignore  README.md  build.zig
zig/src/blockchain/: blockchain.zig
zig/src/blockchain/block/: block.zig  header.zig
zig/src/network/: bootnode.zig  network.zig
zig/src/network/protocols/discv4/: discv4.zig  packet.zig
zig/src/rlp/: decode.zig  encode.zig
zig/src/types/: hashes.zig
